# distilNLP

./: LICENSE  README.md  pyproject.toml
assets/model/chinese_tokenize/: state_dict_20240226004520.pt  vocab_20240226004520.txt  vocab_20240322093302.txt
assets/model/punctuation_normalize/: state_dict_20240207002857.pt  state_dict_20240218211723.pt
distilnlp/: __init__.py
distilnlp/_thirdparty/: local_attention.py  rotary.py  tcn.py
distilnlp/_utils/: data.py  modelfile.py  profile.py  residual.py  unicode.py
distilnlp/chinese_tokenize/: __init__.py  feature.py  from_pretrained.py  model.py  predict.py  preprocess.py  train.py  vocab.py
distilnlp/normalize/: __init__.py  _normalize.py
distilnlp/tests/: _utils.py  chinese_tokenize.py  test_normalize.py  text_normalize.py  utils.py
distilnlp/text_normalize/: __init__.py  emoji.py  text_normalize.py
distilnlp/text_normalize/punctuation_normalize/: __init__.py  feature.py  model.py  pred.py  predict.py  preprocess.py  train.py
distilnlp/utils/: data.py  residual.py
