[project]
name = "distilNLP"
version = "0.0.6"
authors = [
  { name="wencan", email="i@wencan.org" },
]
description = "distilNLP is a low-dependency, GPU-free natural language processing toolkit."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/wencan/distilNLP"
Issues = "https://github.com/wencan/distilNLP/issues"